--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   advertising_id: ^2.2.0
   connectivity_plus: ^2.3.0
   hive: ^2.1.0
-  
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
