Resolved firebase integration, created notification models, introduced notification builder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^1.0.0
+  retrofit_generator: ^4.0.1
   firebase_messaging: ^11.2.11
+  firebase_core: ^1.15.0
   retrofit: ^3.0.1+1
   device_info_plus: ^3.2.2
   dio: ^4.0.6
@@ -20,12 +28,8 @@ dependencies:
   connectivity_plus: ^2.3.0
   hive: ^2.1.0
   path_provider: ^2.0.9
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
-  retrofit_generator: ^4.0.1
+  firebase_analytics: ^9.1.6
+  flutter_custom_tabs: ^1.0.4
   build_runner:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
