--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
   retrofit_generator: ^4.0.1
   firebase_messaging: ^11.2.11
   firebase_core: ^1.15.0
@@ -23,47 +17,19 @@ dev_dependencies:
   device_info_plus: ^3.2.2
   dio: ^4.0.6
   json_serializable: ^6.1.6
-  root: ^2.0.2
   advertising_id: ^2.2.0
   connectivity_plus: ^2.3.0
   hive: ^2.1.0
   path_provider: ^2.0.9
   firebase_analytics: ^9.1.6
   flutter_custom_tabs: ^1.0.4
-  build_runner:
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  another_flushbar: ^1.10.28
 
-# The following section is specific to Flutter.
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^1.0.0
+  build_runner:
+
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
