--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: flutter_user_sdk
-description: A new Flutter package project.
+description: UserComSDK that simplify sending events and receiving campaign notifications
 version: 0.0.1
-homepage:
+homepage: https://github.com/UserEngage/Flutter-SDK
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
