--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_analytics: ^9.1.6
   flutter_custom_tabs: ^1.0.4
   another_flushbar: ^1.10.28
+  awesome_notifications: ^0.6.21
 
 dev_dependencies:
   flutter_test:
