--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ homepage: https://github.com/UserEngage/Flutter-SDK
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
@@ -30,6 +31,4 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   build_runner:
-
-flutter:
 
