Add missing serialization library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_custom_tabs: ^1.0.4
   another_flushbar: ^1.10.29
   awesome_notifications: ^0.6.21
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
