Update lib in project that causes IOS crash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,14 @@ dependencies:
   device_info_plus: ^3.2.2
   dio: ^4.0.6
   json_serializable: ^6.1.6
-  advertising_id: ^2.2.0
+  advertising_id: ^2.3.0
   connectivity_plus: ^2.3.0
   hive: ^2.1.0
   path_provider: ^2.0.9
   firebase_analytics: ^9.1.6
   flutter_custom_tabs: ^1.0.4
   another_flushbar: 1.10.28
-  awesome_notifications: ^0.6.21
+  awesome_notifications: 0.7.0-beta.6
 
 dev_dependencies:
   flutter_test:
