--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_user_sdk
 description: UserComSDK that simplify sending events and receiving campaign notifications
-version: 0.0.3-beta.1
+version: 0.0.4
 homepage: https://github.com/UserEngage/Flutter-SDK
 
 environment:
@@ -11,21 +11,20 @@ dependencies:
   flutter:
     sdk: flutter
   retrofit_generator: ^4.0.1
-  firebase_messaging: ^11.2.11
-  firebase_core: ^1.15.0
+  firebase_messaging: ^14.2.1
+  firebase_core: ^2.4.1
   retrofit: ^3.0.1+1
-  device_info_plus: ^3.2.2
+  device_info_plus: ^8.0.0
   dio: ^4.0.6
   json_serializable: ^6.1.6
   advertising_id: ^2.3.0
   connectivity_plus: ^2.3.0
   hive: ^2.1.0
   path_provider: ^2.0.9
-  firebase_analytics: ^9.1.6
   flutter_custom_tabs: ^1.0.4
   another_flushbar: ^1.10.29
-  awesome_notifications: ^0.7.0-beta.6
   json_annotation: ^4.5.0
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
