--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,31 @@
 name: flutter_user_sdk
 description: UserComSDK that simplify sending events and receiving campaign notifications
-version: 0.0.6
+version: 0.0.7
 homepage: https://github.com/UserEngage/Flutter-SDK
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=3.0.0"
+  sdk: ">=2.19.0 <4.0.0"
+  flutter: " >=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  retrofit_generator: ^4.0.1
+  retrofit_generator: ^7.0.8
   firebase_messaging: ^14.2.1
   firebase_core: ^2.4.1
-  retrofit: ^3.0.1+1
-  device_info_plus: ^8.0.0
-  dio: ^4.0.6
-  json_serializable: ^6.1.6
+  retrofit: ^4.0.1
+  device_info_plus: ^9.0.3
+  dio: ^5.3.2
+  json_serializable: 
   advertising_id: ^2.4.0
-  connectivity_plus: ^2.3.0
+  connectivity_plus: ^4.0.2
   hive: ^2.1.0
-  path_provider: ^2.0.9
-  flutter_custom_tabs: ^1.0.4
+  path_provider: ^2.1.1
   another_flushbar: ^1.10.29
-  json_annotation: ^4.5.0
+  json_annotation: ^4.8.1
+  url_launcher: ^6.1.13
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
-  build_runner:
+  flutter_lints: ^2.0.3
+  build_runner: any
 
