--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   another_flushbar: ^1.12.30
   json_annotation: ^4.8.1
   url_launcher: ^6.2.5
+  google_fonts: 6.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.3
