--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_user_sdk
 description: UserComSDK that simplify sending events and receiving campaign notifications
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/UserEngage/Flutter-SDK
 
 environment:
@@ -10,21 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  retrofit_generator: ^8.1.0
-  firebase_core: ^2.25.5
-  firebase_messaging: ^14.7.14
-  retrofit: ^4.1.0
-  device_info_plus: ^9.1.2
-  dio: ^5.4.1
-  json_serializable: ^6.7.1
-  advertising_id: ^2.6.0
-  connectivity_plus: ^5.0.2
+  retrofit_generator: ^9.1.4
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  retrofit: ^4.4.1
+  device_info_plus: ^11.1.0
+  dio: ^5.7.0
+  json_serializable: ^6.8.0
+  advertising_id: ^2.7.1
+  connectivity_plus: ^6.1.0
   hive: ^2.2.3
-  path_provider: ^2.1.2
+  path_provider: ^2.1.5
   another_flushbar: ^1.12.30
-  json_annotation: ^4.8.1
-  url_launcher: ^6.2.5
-  google_fonts: 6.1.0
+  json_annotation: ^4.9.0
+  url_launcher: ^6.3.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.3
