--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   flutter_user_sdk: 
    path: ../
-  firebase_messaging: ^15.1.3
+  firebase_core: ^3.15.1
+  firebase_messaging: ^15.2.9
   
 
 
